# hanamark

./: .gitignore  README.md
src/: i18n.js  index.html  main.js  renderer.js  search.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  parser.rs  theme.rs  watcher.rs
src/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json  zh-TW.json
src/styles/: base.css
src/themes/: ajisai.json  asagao.json  fuji.json  himawari.json  momiji.json  nadeshiko.json  sakura.json  tanpopo.json  tsubaki.json  ume.json
