[package]
name = "hanamark"
version = "0.1.0"
description = "A beautiful, colorful Markdown viewer"
authors = []
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hanamark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
pulldown-cmark = { version = "0.11", features = ["simd"] }
notify = "6"
